[package]
authors = ["Karl Thorén <karl.h.thoren@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
#panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
adafruit-alphanum4 = "0.1.2"
ht16k33 = { version = "0.4.0", default-features = false }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f407"]

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
